--- a/index.html
+++ b/index.html
@@ -6,12 +6,39 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="shortcut icon" href="./imagenes/logo geni.png">
         <title>Inicio</title>
     </head>
     <body>
         <header id="header">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">SOBRE MÍ</a>
+                          </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">SERVICIOS </a>
+                      </li>
+                      <li class="nav-img">
+                        <a class="navbar-brand" href="index.html"><img src="imagenes/logo geni.png"></a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACTO</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">TIENDA</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </header>
     <main>
 
@@ -22,5 +49,6 @@
     <footer>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
